--- a/styles/style.css
+++ b/styles/style.css
@@ -60,7 +60,7 @@ canvas {
     border-radius: 50px;
     box-shadow: 4px 4px 5px #A8B6FF;
   }
-  @-webkit-keyframes rotating {
+  @keyframes rotating {
     from{
         -webkit-transform: rotate(0deg);
     }
@@ -70,5 +70,5 @@ canvas {
 }
 
   #dylan2 {
-    -webkit-animation: rotating 2s linear infinite;
+    animation: rotating 2s linear infinite;
   }
