--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,12 @@ canvas {
     border: 100px solid red;
     display: none;
   }
-  
+
+#canvas {
+  position: absolute;
+  height: 95%;
+  top: 0;
+}
   .game-over {
     display: none;
     
@@ -68,22 +73,23 @@ canvas {
 
   #dylan2 {
     animation: rotating 2s linear infinite;
+    opacity: 0.5;
   }
 
   #mute-button {
-    position: relative;
+    position: absolute;
+    bottom: 6%;
+    left: 20px;
+    font-size: 18px;
     z-index: 10;
-    height: 50px;
+    height: 40px;
     width: 130px;
-    font-size: 28px;
+    font-size: 20px;
     border-radius: 50px;
     background-color: #A8B6FF;
     color: #042227;
     box-shadow: 4px 4px 5px #A8B6FF;
-    margin-bottom: 30px;
     border-radius: 10px;
-    transition: all 1s ease-in-out;
     font-family: 'ArcadeClassic', sans-serif;
-    align-items: center;
   }
 
